fix about text contrast

--- a/src/app/about-page/about-page.component.scss
+++ b/src/app/about-page/about-page.component.scss
@@ -1,5 +1,10 @@
 p {
   color: #FFFFFF;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 img {
